force-app/main/default/objects/Context__c/fields/Data_Provider_Class__c.field-meta.xml
<CustomField>
    <fullName>Data_Provider_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Provider Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>