force-app/main/default/objects/Context__c/fields/Data_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>