force-app/main/default/objects/Context__c/fields/List_ID__c.field-meta.xml
<CustomField>
    <fullName>List_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>List ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>