force-app/main/default/objects/Context__c/fields/Parent_Key_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Key_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Key Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>