force-app/main/default/objects/Context__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>