force-app/main/default/objects/Context__c/fields/Query_Fields__c.field-meta.xml
<CustomField>
    <fullName>Query_Fields__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Query Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>